--- a/Pages/Projects/projects.html
+++ b/Pages/Projects/projects.html
@@ -14,10 +14,10 @@
         <div>
           <div>
             <ul class="nav-list">
-              <a href="/pages/goals.html"><li>Goals</li></a>
-              <a href="/pages/roadmaps.html"><li>Roadmaps</li></a>
-              <a href="/pages/tracker.html"><li>Trackers</li></a>
-              <a href="/pages/collection.html"><li>Collection</li></a>
+              <a href="/Pages/Goals/goals.html"><li>Goals</li></a>
+              <a href="/Pages/Roadmap/roadmaps.html"><li>Roadmaps</li></a>
+              <a href="/Pages/Tracker/tracker.html"><li>Trackers</li></a>
+              <a href="/Pages/Colllection/collection.html"><li>Collection</li></a>
             </ul>
         </div>
       </nav>
