--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <div>
           <ul class="links">
-            <li><a href="pages/projects.html">Projects</a></li>
-            <li><a href="pages/tracker.html">Trackers</a></li>
-            <li><a href="pages/roadmaps.html">Roadmaps</a></li>
-            <li><a href="pages/goals.html">Goals</a></li>
-            <li><a href="pages/collection.html">Collection</a></li>
+            <li><a href="/Pages/Projects/projects.html">Projects</a></li>
+            <li><a href="/Pages/Tracker/tracker.html">Trackers</a></li>
+            <li><a href="/Pages/Roadmap/roadmaps.html">Roadmaps</a></li>
+            <li><a href="/Pages/Goals/goals.html">Goals</a></li>
+            <li><a href="/Pages/Colllection/collection.html">Collection</a></li>
           </ul>
         </div>
       </nav>
