--- a/Pages/Colllection/collection.html
+++ b/Pages/Colllection/collection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/collection.css" />
+    <link rel="stylesheet" href="collection.css" />
     <title>Collection</title>
   </head>
   <body>
@@ -15,10 +15,10 @@
         <div>
           <div>
             <ul class="nav-list">
-              <a href="/pages/projects.html"><li>Projects</li></a>
-              <a href="/pages/roadmaps.html"><li>Roadmaps</li></a>
-              <a href="/pages/tracker.html"><li>Trackers</li></a>
-              <a href="/pages/goals.html"><li>Goals</li></a>
+              <a href="/Pages/Projects/projects.html"><li>Projects</li></a>
+              <a href="/Pages/Roadmap/roadmaps.html"><li>Roadmaps</li></a>
+              <a href="/Pages/Tracker/tracker.html"><li>Trackers</li></a>
+              <a href="/Pages/Goals/goals.html"><li>Goals</li></a>
             </ul>
         </div>
       </nav>
