--- a/Pages/Roadmap/roadmaps.html
+++ b/Pages/Roadmap/roadmaps.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/roadmap.css">
+    <link rel="stylesheet" href="roadmap.css">
     <title>Roadmaps</title>
   </head>
   <body>
@@ -16,10 +16,10 @@
         <div>
           <div>
             <ul class="nav-list">
-              <a href="/pages/projects.html"><li>Projects</li></a>
-              <a href="/pages/goals.html"><li>Goals</li></a>
-              <a href="/pages/tracker.html"><li>Trackers</li></a>
-              <a href="/pages/collection.html"><li>Collection</li></a>
+              <a href="/Pages/Projects/projects.html"><li>Projects</li></a>
+              <a href="/Pages/Goals/goals.html"><li>Goals</li></a>
+              <a href="/Pages/Tracker/tracker.html"><li>Trackers</li></a>
+              <a href="/Pages/Colllection/collection.html"><li>Collection</li></a>
             </ul>
         </div>
       </nav>
