--- a/Pages/Tracker/tracker.html
+++ b/Pages/Tracker/tracker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/trackers.css" />
+    <link rel="stylesheet" href="trackers.css" />
     <title>Trackers</title>
   </head>
   <body>
@@ -15,10 +15,10 @@
         <div>
           <div>
             <ul class="nav-list">
-              <a href="/pages/projects.html"><li>Projects</li></a>
-              <a href="/pages/roadmaps.html"><li>Roadmaps</li></a>
-              <a href="/pages/goals.html"><li>Goals</li></a>
-              <a href="/pages/collection.html"><li>Collection</li></a>
+              <a href="/Pages/Projects/projects.html"><li>Projects</li></a>
+              <a href="/Pages/Roadmap/roadmaps.html"><li>Roadmaps</li></a>
+              <a href="/Pages/Goals/goals.html"><li>Goals</li></a>
+              <a href="/Pages/Colllection/collection.html"><li>Collection</li></a>
             </ul>
         </div>
       </nav>
@@ -354,6 +354,6 @@
       </section>
     </main>
 
-    <script src="/Javascript/tracker.js"></script>
+    <script src="tracker.js"></script>
   </body>
 </html>
