--- a/Pages/Colllection/collection.html
+++ b/Pages/Colllection/collection.html
@@ -10,7 +10,7 @@
     <header>
       <nav class="navbar">
         <div>
-          <a href="/index.html"><button>Home</button></a>
+          <a href="index.html"><button>Home</button></a>
         </div>
         <div>
           <div>
