--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar">
         <div>
-          <a href="index.html"><button>Home</button></a>
+          <a href="/index.html"><button>Home</button></a>
         </div>
         <div>
           <ul class="nav-list">
