--- a/Pages/Projects/projects.html
+++ b/Pages/Projects/projects.html
@@ -9,7 +9,7 @@
     <header>
       <nav class="navbar">
         <div>
-          <a href="index.html"><button>Home</button></a>
+          <a href="/index.html"><button>Home</button></a>
         </div>
         <div>
           <div>
