--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="Pages/Colllection/collection.html">Collection</a></li>
           </ul>
         </div>
+        <button class="hidden">Menu</button>
       </nav>
     </header>
     <main>
