--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <div>
           <h2>It starts here</h2>
         </div>
-        <div>
-          <ul class="links">
-            <li><a href="Pages/Projects/projects.html">Projects</a></li>
-            <li><a href="Pages/Tracker/tracker.html">Trackers</a></li>
-            <li><a href="Pages/Roadmap/roadmaps.html">Roadmaps</a></li>
-            <li><a href="Pages/Goals/goals.html">Goals</a></li>
-            <li><a href="Pages/Colllection/collection.html">Collection</a></li>
-          </ul>
-        </div>
-        <button class="hidden">Menu</button>
+        <button id="menu">Menu</button>
       </nav>
+      <div class="ul-links hidden">
+        <ul class="links">
+          <li><a href="Pages/Projects/projects.html">Projects</a></li>
+          <li><a href="Pages/Tracker/tracker.html">Trackers</a></li>
+          <li><a href="Pages/Roadmap/roadmaps.html">Roadmaps</a></li>
+          <li><a href="Pages/Goals/goals.html">Goals</a></li>
+          <li><a href="Pages/Colllection/collection.html">Collection</a></li>
+        </ul>
+      </div>
     </header>
     <main>
       <section>
@@ -36,5 +36,6 @@
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
