--- a/Pages/Tracker/tracker.html
+++ b/Pages/Tracker/tracker.html
@@ -34,47 +34,54 @@
         <button class="manga-btn">Manga</button>
         <div id="anime">
           <h1>Anime</h1>
-          <table class="anime">
-            <tr>
-              <th class="item">Name</th>
-              <th class="item">Status</th>
-              <th class="item">Season</th>
-              <th class="item">Episodes Watched</th>
-              <th class="item">Video</th>
-            </tr>
-            <tr>
-              <td class="item">One Piece</td>
-              <td class="item">Ongoing</td>
-              <td class="item">None</td>
-              <td class="item">1116</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="https://www.dropbox.com/scl/fi/s7gu5sk9skei22fiq1wkt/OnePiece.mp4?rlkey=t1s3r0knx2e0084q8wrjexnuw&st=vd1lgcso&raw=1" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">My Hero Academia</td>
-              <td class="item">Ongoing</td>
-              <td class="item">7</td>
-              <td class="item">13</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="https://www.dropbox.com/scl/fi/8hvydc7i1beiga1ntpz1u/Hero-online-video-cutter.com.mp4?rlkey=2z3rv0genc76rmyfwp2tfxd5j&st=qzugzf3b&raw=1" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">Mission: Yozakura Family</td>
-              <td class="item">Ongoing</td>
-              <td class="item">None</td>
-              <td class="item">20</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="https://www.dropbox.com/scl/fi/43cuzthi5qex2lfahvi7h/Mission-online-video-cutter.com.mp4?rlkey=fp03tvu0j5kcncchgfmiq43nt&st=ss24cigq&raw=1" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
+
+          <div class="container">
+            <h1>One Piece</h1>
+            <video muted loop autoplay>
+              <source src="https://www.dropbox.com/scl/fi/s7gu5sk9skei22fiq1wkt/OnePiece.mp4?rlkey=t1s3r0knx2e0084q8wrjexnuw&st=vd1lgcso&raw=1" type="video/mp4" />
+            </video>
+            <p>Ongoing</p>
+            <button class="info">Info</button>
+          </div>
+
+          <div class="container">
+            <h1>My Hero Academia</h1>
+            <video muted loop autoplay>
+              <source src="https://www.dropbox.com/scl/fi/8hvydc7i1beiga1ntpz1u/Hero-online-video-cutter.com.mp4?rlkey=2z3rv0genc76rmyfwp2tfxd5j&st=qzugzf3b&raw=1" type="video/mp4" />
+            </video>
+            <p>Ongoing</p>
+            <button class="info">Info</button>
+          </div>
+
+          <div class="container">
+            <h1>Mission: Yozakura Family</h1>
+            <video muted loop autoplay>
+              <source src="https://www.dropbox.com/scl/fi/43cuzthi5qex2lfahvi7h/Mission-online-video-cutter.com.mp4?rlkey=fp03tvu0j5kcncchgfmiq43nt&st=ss24cigq&raw=1" type="video/mp4"/>
+            </video>
+            <p>Ongoing</p>
+            <button class="info">Info</button>
+          </div>
+
+          <div class="container">
+            <h1>One Piece</h1>
+            <video muted loop autoplay>
+              <source src="" />
+            </video>
+            <p>Ongoing</p>
+            <button class="info">Info</button>
+          </div>
+
+          <div class="container">
+            <h1>One Piece</h1>
+            <video muted loop autoplay>
+              <source src=""/>
+            </video>
+            <p>Ongoing</p>
+            <button class="info">Info</button>
+          </div>
+
+        </div>
+          
             <tr>
               <td class="item">Rurouni Kenshin</td>
               <td class="item">Coming Soon</td>
