--- a/Pages/Roadmap/roadmaps.html
+++ b/Pages/Roadmap/roadmaps.html
@@ -55,7 +55,7 @@
           <div class="card-body">
             <h5 class="card-title">Self Care</h5>
             <p class="card-text">Step by step guide to improving my self care</p>
-            <a href="/pages/roadmaps/self-care.html" class="btn btn-primary">Roadmap</a>
+            <a href="roadmaps/self-care.html" class="btn btn-primary">Roadmap</a>
           </div>
         </div>
       </section>
