--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -11,7 +11,7 @@
       <nav>
         <img src="/Addons/imgs/vision/self.jpg" alt="Vision Board" />
         <h1>Self - Care</h1>
-        <a href="/pages/roadmaps.html"><button>Home</button></a>
+        <a href="/Pages/Roadmap/roadmaps.html"><button>Home</button></a>
       </nav>
     </header>
     <main>
