--- a/Pages/Tracker/tracker.html
+++ b/Pages/Tracker/tracker.html
@@ -41,7 +41,8 @@
               <source src="https://www.dropbox.com/scl/fi/s7gu5sk9skei22fiq1wkt/OnePiece.mp4?rlkey=t1s3r0knx2e0084q8wrjexnuw&st=vd1lgcso&raw=1" type="video/mp4" />
             </video>
             <p>Ongoing</p>
-            <button class="info">Info</button>
+            <p>Season: None</p>
+            <p>Episode: 1118</p>
           </div>
 
           <div class="container">
@@ -50,7 +51,8 @@
               <source src="https://www.dropbox.com/scl/fi/8hvydc7i1beiga1ntpz1u/Hero-online-video-cutter.com.mp4?rlkey=2z3rv0genc76rmyfwp2tfxd5j&st=qzugzf3b&raw=1" type="video/mp4" />
             </video>
             <p>Ongoing</p>
-            <button class="info">Info</button>
+            <p>Season: 7</p>
+            <p>Episode: 14</p>
           </div>
 
           <div class="container">
@@ -59,25 +61,8 @@
               <source src="https://www.dropbox.com/scl/fi/43cuzthi5qex2lfahvi7h/Mission-online-video-cutter.com.mp4?rlkey=fp03tvu0j5kcncchgfmiq43nt&st=ss24cigq&raw=1" type="video/mp4"/>
             </video>
             <p>Ongoing</p>
-            <button class="info">Info</button>
-          </div>
-
-          <div class="container">
-            <h1>One Piece</h1>
-            <video muted loop autoplay>
-              <source src="" />
-            </video>
-            <p>Ongoing</p>
-            <button class="info">Info</button>
-          </div>
-
-          <div class="container">
-            <h1>One Piece</h1>
-            <video muted loop autoplay>
-              <source src=""/>
-            </video>
-            <p>Ongoing</p>
-            <button class="info">Info</button>
+            <p>Season: None</p>
+            <p>Episode: 20</p>
           </div>
 
         </div>
@@ -85,47 +70,24 @@
            
         <div id="movies" class="hidden">
           <h1>Movies</h1>
-          <table class="anime">
-            <tr>
-              <th class="item">Name</th>
-              <th class="item">Status</th>
-              <th class="item">Release Date</th>
-              <th class="item">Video</th>
-            </tr>
-            <tr>
-              <td class="item">OVERLORD: The Sacred Kingdom</td>
-              <td class="item">Coming Soon</td>
-              <td class="item">Sep 20, 2024</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="https://www.dropbox.com/scl/fi/hi10ywrp8fhnp5qtfdovh/OVERLORD-Movie_-The-Sacred-Kingdom-Official-Trailer-online-video-cutter.com.mp4?rlkey=5aclsmjh3q3pnoo62ps8hjdp1&st=rw0qokyl&raw=1" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">
-                Demon Slayer: Kimetsu no Yaiba Infinity Castle
-              </td>
-              <td class="item">Coming Soon</td>
-              <td class="item">Late 2025</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="https://www.dropbox.com/scl/fi/pasgxlsthy8fxqoc6kxe8/Demon-Slayer_-Kimetsu-no-Yaiba-Infinity-Castle-_-OFFICIAL-TRAILER-1.mp4?rlkey=2xjyjjji8lxtu5bqqrqvekw20&st=ootbcy31&raw=1" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">My Hero Academia: You’re Next</td>
-              <td class="item">Coming Soon</td>
-              <td class="item">Oct 11, 2024</td>
-              <td class="item">
-                <video muted loop autoplay>
-                  <source src="/Addons/videos/HeroMovie.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-          </table>
+
+          <div class="container">
+            <h1>OVERLORD: The Sacred Kingdom</h1>
+            <video muted loop autoplay>
+              <source src="https://www.dropbox.com/scl/fi/hi10ywrp8fhnp5qtfdovh/OVERLORD-Movie_-The-Sacred-Kingdom-Official-Trailer-online-video-cutter.com.mp4?rlkey=5aclsmjh3q3pnoo62ps8hjdp1&st=rw0qokyl&raw=1" type="video/mp4"/>
+            </video>
+            <p>Release Date: Sep 20, 2024</p>
+          </div>
+
+          <div class="container">
+            <h1>Demon Slayer: Kimetsu no Yaiba Infinity Castle</h1>
+            <video muted loop autoplay>
+              <source src="https://www.dropbox.com/scl/fi/pasgxlsthy8fxqoc6kxe8/Demon-Slayer_-Kimetsu-no-Yaiba-Infinity-Castle-_-OFFICIAL-TRAILER-1.mp4?rlkey=2xjyjjji8lxtu5bqqrqvekw20&st=ootbcy31&raw=1" type="video/mp4"/>
+            </video>
+            <p>Release Date: Late 2025</p>
+          </div>
         </div>
+
         <div id="games" class="hidden">
           <h1>Games</h1>
 
@@ -135,7 +97,7 @@
               <source src="https://www.dropbox.com/scl/fi/wm0qf8ylqph7ze4ol7xwt/Warhammer-40-000_-Space-Marine-2-Gameplay-Overview-Trailer-1.mp4?rlkey=y1jwswgmf035pt1ufdjv3p44b&st=u7bfm375&raw=1" type="video/mp4" />
             </video>
             <p>Ps5</p>
-            <button class="info">Info</button>
+            <p>Release Date: Out</p>
           </div>
 
           <div class="container">
@@ -144,7 +106,7 @@
               <source src="https://www.dropbox.com/scl/fi/y0eh6yju4zvjx45j80845/METAL-GEAR-SOLID-SNAKE-EATER-Official-4K-Trailer-_-Xbox-Games-Showcase-2024-online-video-cutter.com.mp4?rlkey=h9t9ybhdc1diiaw2rxoc4cesy&st=yj28ujm0&raw=1" type="video/mp4" />
             </video>
             <p>Ps5</p>
-            <button class="info">Info</button>
+            <p>Release Date: Early 2025</p>
           </div>
 
           <div class="container">
@@ -153,61 +115,10 @@
               <source src="https://www.dropbox.com/scl/fi/s0cdsuejorewr87y082qd/DOOM-THE-DARK-AGES-Gameplay-Trailer-4K-2025-online-video-cutter.com.mp4?rlkey=g4rxkwm6f4vc3f66jxdsw3c9f&st=knt00qwc&raw=1" type="video/mp4" />
             </video>
             <p>Ps5</p>
-            <button class="info">Info</button>
+            <p>Release Date: Mid 2025</p>
           </div>
-
-            <tr>
-              <td class="item">Black Myth: Wukong</td>
-              <td class="item">Ps5</td>
-              <td class="item">Out</td>
-              <td class="item">
-                <video controls>
-                  <source src="/Addons/videos/Black.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">Elden Ring</td>
-              <td class="item">Ps5</td>
-              <td class="item">Out</td>
-              <td class="item">
-                <video controls>
-                  <source src="/Addons/videos/Elden.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">Gundam Breaker 4</td>
-              <td class="item">Ps5</td>
-              <td class="item">Out</td>
-              <td class="item">
-                <video controls>
-                  <source src="/Addons/videos/gundam.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">Dragon Ball : Sparking Zero</td>
-              <td class="item">Ps5</td>
-              <td class="item">Mid 2025</td>
-              <td class="item">
-                <video controls>
-                  <source src="/Addons/videos/Dragon.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-            <tr>
-              <td class="item">Astro Bot</td>
-              <td class="item">Ps5</td>
-              <td class="item">Out</td>
-              <td class="item">
-                <video controls>
-                  <source src="/Addons/videos/Astro.mp4" type="video/mp4" />
-                </video>
-              </td>
-            </tr>
-          </table>
         </div>
+
         <div id="manga" class="hidden">
           <h1>Manga</h1>
 
