--- a/Pages/Projects/projects.html
+++ b/Pages/Projects/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="projects.css">
     <title>Projects</title>
   </head>
   <body>
@@ -24,7 +25,31 @@
     </header>
     <main>
       <section>
-        
+        <div class="container">
+          <h1>Tindogs #3</h1>
+          <img src="imgs/Tindogs.png" alt="Third project">
+          <a href="https://demarcus3456.github.io/Tindog/"><button>Open</button></a>
+        </div>
+
+        <div class="container">
+          <h1>Recipes #1</h1>
+          <img src="imgs/odin.png" alt="Third project">
+          <a href="https://demarcus3456.github.io/odin-recipes/index.htmlS"><button>Open</button></a>
+        </div>
+
+        <div class="container">
+          <h1>About Me #2</h1>
+          <img src="imgs/about.png" alt="Second project">
+          <a href="https://demarcus3456.github.io/Top-Landing-page/"><button>Open</button></a>
+        </div>
+
+        <div class="container">
+          <h1>Art Gallery #4</h1>
+          <img src="imgs/art.png" alt="Fourth project">
+          <a href="https://demarcus3456.github.io/Art-Gallery/"><button>Open</button></a>
+        </div>
+
+
       </section>
     </main>
   </body>
