--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -30,17 +30,17 @@
       <div class="step-menu">
         <div class="step-btns">
           <button class="step-back">Back</button>
-          <ul>
-            <li><a><img src='#' alt="1"></a></li>
-            <li><a><img src='#' alt="2"></a></li>
-            <li><a><img src='#' alt="3"></a></li>
-            <li><a><img src='#' alt="4"></a></li>
-            <li><a><img src='#' alt="5"></a></li>
-            <li><a><img src='#' alt="6"></a></li>
-            <li><a><img src='#' alt="7"></a></li>
-            <li><a><img src='#' alt="8"></a></li>
-            <li><a><img src='#' alt="9"></a></li>
-            <li><a><img src='#' alt="10"></a></li>
+          <ul class="btn-list">
+            <li><a><button>Step 1</button></a></li>
+            <li><a><button>Step 2</button></a></li>
+            <li><a><button>Step 3</button></a></li>
+            <li><a><button>Step 4</button></a></li>
+            <li><a><button>Step 5</button></a></li>
+            <li><a><button>Step 6</button></a></li>
+            <li><a><button>Step 7</button></a></li>
+            <li><a><button>Step 8</button></a></li>
+            <li><a><button>Step 9</button></a></li>
+            <li><a><button>Step 10</button></a></li>
           </ul>
         </div>
       </div>       
