--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -27,52 +27,53 @@
     <main>
       <!-- Steps I must take for each goal -->
       <section class="steps">
-      <div class="step-menu">
+       <div class="step-menu hidden">
         <div class="step-btns">
           <button class="step-back">Back</button>
           <ul class="btn-list">
-            <li><a><button>Step 1</button></a></li>
-            <li><a><button>Step 2</button></a></li>
-            <li><a><button>Step 3</button></a></li>
-            <li><a><button>Step 4</button></a></li>
-            <li><a><button>Step 5</button></a></li>
-            <li><a><button>Step 6</button></a></li>
-            <li><a><button>Step 7</button></a></li>
-            <li><a><button>Step 8</button></a></li>
-            <li><a><button>Step 9</button></a></li>
-            <li><a><button>Step 10</button></a></li>
+            <li><button class="oneBtn">Step 1</button></li>
+            <li><button class="twoBtn">Step 2</button></li>
+            <li><button class="threeBtn">Step 3</button></li>
+            <li><button class="fourBtn">Step 4</button></li>
+            <li><button class="fiveBtn">Step 5</button></li>
+            <li><button class="sixBtn">Step 6</button></li>
+            <li><button class="sevenBtn">Step 7</button></li>
+            <li><button class="eightBtn">Step 8</button></li>
+            <li><button class="nineBtn">Step 9</button></li>
+            <li><button class="tenBtn">Step 10</button></li>
           </ul>
         </div>
+       </div>
+      <div>
+        <button class="step-btn">Steps-menu</button>
       </div>       
-      <div class="hidden steps-list">
+      <div class="steps-list">
         <h1>Steps</h1>
-        <ol>
-          <li class="item" id="1">1. Get a piece of paper</li>
-          <li class="item" id="2">2. Where I currently am in my life</li>
-          <li class="item" id="3">3. Write my goals and dreams</li>
-          <li class="item" id="4">4. Circle one goal goal most important to me</li>
-          <li class="item" id="5">5. Why this goal is important to me</li>
-          <li class="item" id="6">6. 1-3-5 steps to achive that goal</li>
-          <li class="item" id="7">
+          <div class="item one">1. Get a piece of paper</div>
+          <div class="item two">2. Where I currently am in my life</div>
+          <div class="item three">3. Write my goals and dreams</div>
+          <div class="item four">4. Circle one goal goal most important to me</div>
+          <div class="item five">5. Why this goal is important to me</div>
+          <div class="item six">6. 1-3-5 steps to achive that goal</div>
+          <div class="item seven">
             7. Be specific about that goal what, when and where
-          </li>
-          <li class="item" id="8">
+          </div>
+          <div class="item eight">
             8. Turnsteps into habits
             <ol>
-              <li class="item">A. Start small</li>
-              <li class="item">B. Be cosistent</li>
-              <li class="item">C. Be specific, when & what</li>
-              <li class="item">D. Change environment</li>
-              <li class="item">E. Change company</li>
-              <li class="item">F. Make it enjoyalbe</li>
-              <li class="item">G. Change haves to gets</li>
-              <li class="item">H. Habit tracker</li>
-              <li class="item">I. Dont aim for perfection</li>
+              <li class="items">A. Start small</li>
+              <li class="items">B. Be cosistent</li>
+              <li class="items">C. Be specific, when & what</li>
+              <li class="items">D. Change environment</li>
+              <li class="items">E. Change company</li>
+              <li class="items">F. Make it enjoyalbe</li>
+              <li class="items">G. Change haves to gets</li>
+              <li class="items">H. Habit tracker</li>
+              <li class="items">I. Dont aim for perfection</li>
               <li>J. Take action</li>
-            </ol>
-          </li>
-          <li class="item" id="9">9. Adjusting</li>
-          <li class="item" id="10">10. Forget about the goal and focus on a system</li>
+          </div>
+          <div class="item nine">9. Adjusting</div>
+          <div class="item ten">10. Forget about the goal and focus on a system</div>
         </ol>
       </div>
       </section>
