--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -161,10 +161,10 @@
     <footer>
       <nav class="hidden nav-mobile">
         <ul class="mobile-list">
-          <li><a href="#" class="menu-item">step</a></li>
-          <li><a href="#" class="menu-item">list</a></li>
-          <li><a href="#" class="menu-item">note</a></li>
-          <li><a href="#" class="menu-item">road</a></li>
+          <li><a href="#" class="menu-item steps-btn">step</a></li>
+          <li><a href="#" class="menu-item list-btn">list</a></li>
+          <li><a href="#" class="menu-item life-btn">note</a></li>
+          <li><a href="#" class="menu-item goals-btn">road</a></li>
         </ul>
       </nav>
     </footer>
