--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -19,6 +19,7 @@
         src="/Addons/imgs/vision/self.jpg"
         alt="Vision Board"
       />
+      <h1 class="vision">Vision Board</h1>
       <section class="hidden" id="steps">
         <h1>1-3-5 Steps</h1>
         <ul>
