--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -161,10 +161,10 @@
     <footer>
       <nav class="hidden nav-mobile">
         <ul class="mobile-list">
-          <li><a href="#" class="menu-item steps-btn">step</a></li>
-          <li><a href="#" class="menu-item list-btn">list</a></li>
-          <li><a href="#" class="menu-item life-btn">note</a></li>
-          <li><a href="#" class="menu-item goals-btn">road</a></li>
+          <li><a href="#" class="menu-item steps-btn"><img  class='icon' src="/Addons/imgs/goals/icons8-steps-96.png" alt="Steps icon"></a></li>
+          <li><a href="#" class="menu-item list-btn"><img  class='icon' src="/Addons/imgs/goals/icons8-list-96.png" alt="Steps icon"></a></li>
+          <li><a href="#" class="menu-item life-btn"><img  class='icon' src="/Addons/imgs/goals/icons8-notes-96.png" alt="Steps icon"></a></li>
+          <li><a href="#" class="menu-item goals-btn"><img  class='icon' src="/Addons/imgs/goals/icons8-roadmap-96.png" alt="Steps icon"></a></li>
         </ul>
       </nav>
     </footer>
