--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -10,16 +10,18 @@
     <header>
       <nav>
         <h1>Self - Care</h1>
-        <a href="/Pages/Goals/goals.html"><button>Home</button></a>
+        <a href="/Pages/Goals/goals.html"
+          ><img class="icon" src="/Addons/imgs/icons8-home-96.png" alt="Home"
+        /></a>
       </nav>
     </header>
     <main>
+      <h1 class="vision">Vision Board</h1>
       <img
         class="vision"
         src="/Addons/imgs/vision/self.jpg"
         alt="Vision Board"
       />
-      <h1 class="vision">Vision Board</h1>
       <section class="hidden" id="steps">
         <h1>1-3-5 Steps</h1>
         <ul>
