--- a/Pages/Projects/projects.html
+++ b/Pages/Projects/projects.html
@@ -40,7 +40,7 @@
         <div class="container">
           <h1>About Me #2</h1>
           <img src="imgs/about.png" alt="Second project">
-          <a href="https://demarcus3456.github.io/Top-Landing-page/"><button>Open</button></a>
+          <a href="https://demarcus3456.github.io/odin-recipes/"><button>Open</button></a>
         </div>
 
         <div class="container">
