--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -16,12 +16,10 @@
       </nav>
     </header>
     <main>
-      <h1 class="vision">Vision Board</h1>
-      <img
-        class="vision"
-        src="/Addons/imgs/vision/self.jpg"
-        alt="Vision Board"
-      />
+      <div class="vision">
+        <h1 class="vision-text">Vision Board</h1>
+        <img src="/Addons/imgs/vision/self.jpg" alt="Vision Board" />
+      </div>
       <section class="hidden" id="steps">
         <h1>1-3-5 Steps</h1>
         <ul>
@@ -43,10 +41,34 @@
       </section>
       <footer>
         <ul class="bottom-nav">
-          <li><button class="steps-btn">1-3-5</button></li>
-          <li><button class="detail-btn">Detail</button></li>
-          <li><button class="breakdown-btn">BreakDown</button></li>
-          <li><button class="items-btn">Items</button></li>
+          <li>
+            <img
+              class="steps-btn icon"
+              src="/Addons/imgs/goals/icons8-steps-96 (1).png"
+              alt="1-3-5"
+            />
+          </li>
+          <li>
+            <img
+              class="detail-btn icon"
+              src="/Addons/imgs/goals/icons8-detail-96.png"
+              alt="Details"
+            />
+          </li>
+          <li>
+            <img
+              class="breakdown-btn icon"
+              src="/Addons/imgs/goals/icons8-break-96.png"
+              alt="Breakdown"
+            />
+          </li>
+          <li>
+            <img
+              class="items-btn icon"
+              src="/Addons/imgs/goals/icons8-item-96.png"
+              alt="Items"
+            />
+          </li>
         </ul>
       </footer>
     </main>
