--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -111,21 +111,21 @@
 
       <!-- Where I am at in life -->
       <section class="life">
-        <div class="container hidden">
+        <div class="container">
           <h1>Heath</h1>
           <p>
             Im currently over weight '200.4' where im starting to noticed rashes
             on my skin and low energy where it cause me to be sore.
           </p>
         </div>
-        <div class="container hidden">
+        <div class="container">
           <h1>Self - Care</h1>
           <p>
             My body is a mess. Hair is damage, teeth is losing its color and
             slowy detrating & face is sheding during the day.
           </p>
         </div>
-        <div class="container hidden">
+        <div class="container">
           <h1>Self Development</h1>
           <p>
             Im lacking in hobbies as each day im always looking for something to
@@ -133,7 +133,7 @@
             me from my primary goals in being better then i was yesterday.
           </p>
         </div>
-        <div class="container hidden">
+        <div class="container">
           <h1>Career</h1>
           <p>
             Im struggling currently where I have to work jobs I dont like just
