--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -21,23 +21,45 @@
         <img src="/Addons/imgs/vision/self.jpg" alt="Vision Board" />
       </div>
       <section class="hidden" id="steps">
-        <h1>1-3-5 Steps</h1>
-        <ul>
-          <li>1. Repair hair</li>
-          <li>2. Repair face</li>
-          <li>3. Repair teeth</li>
-          <li>4. Repair feet & hands</li>
-          <li>5. Repair body</li>
-        </ul>
+        <p>1. Repair hair</p>
+        <p>2. Repair face</p>
+        <p>3. Repair teeth</p>
+        <p>4. Repair body</p>
       </section>
       <section class="hidden" id="detail">
-        <h1>Detail about goal</h1>
+        <p></p>
       </section>
       <section class="hidden" id="breakdown">
-        <h1>Breaking down goal</h1>
+        <div class="box">
+          <h1 class="vision-text">Repairing hair</h1>
+          <p>1. Oil hair twice a day</p>
+          <p>2. Get hair cut & beard trim every two weeks</p>
+          <p>3. Curl treatment every 3 months</p>
+        </div>
+
+        <div class="box">
+          <h1 class="vision-text">Repairing face</h1>
+          <p>1. Oil hair twice a day</p>
+          <p>2. Get hair cut & beard trim every two weeks</p>
+          <p>3. Curl treatment every 3 months</p>
+        </div>
+
+        <div class="box">
+          <h1 class="vision-text">Repairing teeth</h1>
+          <p>1. Oil hair twice a day</p>
+          <p>2. Get hair cut & beard trim every two weeks</p>
+          <p>3. Curl treatment every 3 months</p>
+        </div>
+
+        <div class="box">
+          <h1 class="vision-text">Repairing body</h1>
+          <p>1. Oil hair twice a day</p>
+          <p>2. Get hair cut & beard trim every two weeks</p>
+          <p>3. Curl treatment every 3 months</p>
+        </div>
       </section>
       <section class="hidden" id="items">
-        <h1>Items and Instrutions</h1>
+        <p></p>
       </section>
       <footer>
         <ul class="bottom-nav">
