--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -39,23 +39,23 @@
 
         <div class="box">
           <h1 class="vision-text">Repairing face</h1>
-          <p>1. Oil hair twice a day</p>
-          <p>2. Get hair cut & beard trim every two weeks</p>
-          <p>3. Curl treatment every 3 months</p>
+          <p>1. Moist face every morning and night</p>
+          <p>2. Apply face mask every saturday</p>
+          <p>3. Apply lip bomb when lips are dry</p>
         </div>
 
         <div class="box">
           <h1 class="vision-text">Repairing teeth</h1>
-          <p>1. Oil hair twice a day</p>
-          <p>2. Get hair cut & beard trim every two weeks</p>
-          <p>3. Curl treatment every 3 months</p>
+          <p>1. Brush teeth & use mouthwash every morning and night</p>
+          <p>2. Floss every night</p>
         </div>
 
         <div class="box">
           <h1 class="vision-text">Repairing body</h1>
-          <p>1. Oil hair twice a day</p>
-          <p>2. Get hair cut & beard trim every two weeks</p>
-          <p>3. Curl treatment every 3 months</p>
+          <p>1. Every 3 month get feet and hands done</p>
+          <p>2. Wear socks</p>
+          <p>3. Take a cold shower when I take a shower everyday</p>
+          <p>4. Take my daily vitamins</p>
         </div>
       </section>
       <section class="hidden" id="items">
